<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price_per_litro">Preço por litro</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_litro">KMs por litro</string>
    <string name="total_spend">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">CALCULAR</string>
    <string name="Mensage_All_Camps">Preencha todos os campos.</string>
</resources>