<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/distance"
                android:inputType="number"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/total_km"
                android:textColor="#070707"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/price_per_litro"
                android:textColor="#070707"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/edit_autonomy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:hint="@string/autonomy"
                android:inputType="number"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/kms_per_litro"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/total_spend"
                android:textColor="#989393"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/text_total_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/total_value"
                android:textColor="#F44336"
                android:textSize="38sp"
                android:textStyle="bold" />

            <Button

                android:id="@+id/button_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:padding="16dp"
                android:text="@string/calculate"
                android:textSize="20sp"
                app:cornerRadius="20dp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
